--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.App {
-  text-align: center;
+.App{
+  padding: 20px 20px 20px 20px;
+  font-family: "Comic Sans MS";
 }
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
